--- a/data/cards/38910263.yaml
+++ b/data/cards/38910263.yaml
@@ -1,7 +1,7 @@
 konami_id: 19399
 password: 38910263
 name:
-  en: Fire King Avatar Hanuman
+  en: Fire King Avatar Rangbali
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a face-up "Fire King" monster(s) you control is destroyed by card effect (except during the Damage Step): You can Special Summon this card from your hand. When a Spell/Trap Card or effect is activated while this monster is on the field (Quick Effect): You can negate the activation, and if you do, destroy 1 other FIRE monster in your hand or face-up field. You can only use each effect of "Fire King Avatar Hanuman" once per turn.
+    If a face-up "Fire King" monster(s) you control is destroyed by card effect (except during the Damage Step): You can Special Summon this card from your hand. When a Spell/Trap Card or effect is activated, while this card is on the field (Quick Effect): You can negate the activation, and if you do, destroy 1 other FIRE monster in your hand or face-up field. You can only use each effect of "Fire King Avatar Rangbali" once per turn.
   de:
   es:
   fr:
@@ -36,12 +36,33 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingAvatarHanuman-SR14-JP-SR.png
+  image: FireKingAvatarRangbali-SR14-JP-SR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN003
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR14-DE003
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR14-FR003
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR14-IT003
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR14-PT003
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR14-JP003
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
@@ -50,7 +71,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1002077
