--- a/data/cards/54149433.yaml
+++ b/data/cards/54149433.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎王兽 大鹏不死鸟
 text:
   en: |-
-    If a face-up "Fire King" monster you control is destroyed by a card effect (except during the Damage Step): You can Special Summon this card from your hand. If this card in your possession is destroyed by your opponent's card (either by battle or by card effect) and sent to your Graveyard: You can Special Summon 1 "Fire King Avatar" monster from your Deck.
+    If a face-up "Fire King" monster you control is destroyed by card effect (except during the Damage Step): You can Special Summon this card from your hand. If this card in your possession is destroyed by an opponent's card and sent to your GY: You can Special Summon 1 "Fire King Avatar" monster from your Deck.
   de: |-
     Falls ein offenes „Feuerkönig“-Monster, das du kontrollierst, durch einen Karteneffekt zerstört wird (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Falls diese Karte, die dir gehört, durch eine Karte deines Gegners zerstört (entweder durch Kampf oder durch einen Karteneffekt) und auf deinen Friedhof gelegt wird: Du kannst 1 „Feuerkönig Avatar“-Monster als Spezialbeschwörung von deinem Deck beschwören.
   es: |-
@@ -56,9 +56,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN004
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: LTGY-DE034
     set_name: Lord of the Tachyon Galaxy
