--- a/data/cards/64182380.yaml
+++ b/data/cards/64182380.yaml
@@ -42,9 +42,30 @@ images:
   image: GarunixEternityHyangoftheFireKings-SR14-JP-UR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN044
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR14-DE044
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR14-FR044
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR14-IT044
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR14-PT044
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR14-JPP01
     set_name: "Structure Deck R: Onslaught of the Fire Kings Second Coming of the Eternal Flames' Ruler Pack"
