--- a/data/cards/91703676.yaml
+++ b/data/cards/91703676.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target the same number of "Fire King" monsters you control and cards your opponent controls; destroy them. If a "Fire King" card(s) you control would be destroyed by card effect, you can banish this card from your GY instead. You can only use 1 "Fire King Sky Burn" effect per turn, and only once that turn.
+    Target an equal number of "Fire King" monsters you control and cards your opponent controls; destroy them. If a "Fire King" card(s) you control would be destroyed by card effect, you can banish this card from your GY instead. You can only use 1 "Fire King Sky Burn" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,9 +35,30 @@ images:
   image: FireKingSkyBurn-SR14-JP-SR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN025
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Super Rare
+  de:
+  - set_number: SR14-DE025
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: SR14-FR025
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: SR14-IT025
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: SR14-PT025
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
   ja:
   - set_number: SR14-JP025
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
@@ -46,7 +67,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1002078
