--- a/data/cards/kdb4999.yaml
+++ b/data/cards/kdb4999.yaml
@@ -51,7 +51,7 @@ images:
   illustration: SlifertheSkyDragon-Artwork-2.png
 - index: 3
   image: SlifertheSkyDragon-MVP1-EN-UR-LE.png
-  illustration: SlifertheSkyDragon-OW-2.png
+  illustration: SlifertheSkyDragon-MADU-EN-VG-artwork-2.png
 sets:
   en:
   - set_number: BP02-EN127
