--- a/data/cards/02526224.yaml
+++ b/data/cards/02526224.yaml
@@ -39,9 +39,30 @@ images:
   image: FireKingHighAvatarKirin-SR14-JP-SR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN002
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR14-DE002
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR14-FR002
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR14-IT002
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR14-PT002
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR14-JP002
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
@@ -50,7 +71,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 992826
