--- a/data/cards/65305978.yaml
+++ b/data/cards/65305978.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can place 1 "Fire King Island" from your Deck face-up in your Field Zone. Once per turn, if a card in your Field Zone would be destroyed by card effect, you can destroy 1 FIRE monster in your hand or face-up field instead. Once per turn, if your opponent Special Summons a monster(s), you can (except during the Damage Step): Immediately after this effect resolves, Xyz Summon 1 FIRE Xyz Monster using only "Fire King" monsters you control as material. You can only activate 1 "Fire King Sanctuary" per turn.
+    When this card is activated: You can place 1 "Fire King Island" from your Deck face-up in your Field Zone. Once per turn, if a card in your Field Zone would be destroyed by card effect, you can destroy 1 FIRE monster in your hand or face-up field instead. Once per turn, if your opponent Special Summons a monster(s), you can: Immediately after this effect resolves, Xyz Summon 1 FIRE Xyz Monster using only "Fire King" monsters you control. You can only activate 1 "Fire King Sanctuary" per turn.
   de:
   es:
   fr:
@@ -35,9 +35,30 @@ images:
   image: FireKingSanctuary-SR14-JP-SR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN024
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR14-DE024
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR14-FR024
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR14-IT024
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR14-PT024
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR14-JP024
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
@@ -46,7 +67,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 992828
