--- a/data/cards/66431519.yaml
+++ b/data/cards/66431519.yaml
@@ -39,9 +39,30 @@ images:
   image: SacredFireKingGarunix-SR14-JP-UR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN001
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Ultra Rare
+  de:
+  - set_number: SR14-DE001
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SR14-FR001
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SR14-IT001
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SR14-PT001
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SR14-JP001
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
