--- a/data/cards/90681088.yaml
+++ b/data/cards/90681088.yaml
@@ -39,9 +39,30 @@ images:
   image: LegendaryFireKingPonix-SR14-JP-SR.png
 sets:
   en:
-  - set_number: SR14-EN???
+  - set_number: SR14-EN045
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Super Rare
+  de:
+  - set_number: SR14-DE045
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: SR14-FR045
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: SR14-IT045
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: SR14-PT045
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Super Rare
   ja:
   - set_number: SR14-JPP02
     set_name: "Structure Deck R: Onslaught of the Fire Kings Second Coming of the Eternal Flames' Ruler Pack"
