--- a/data/rush/yugipedia1031094.yaml
+++ b/data/rush/yugipedia1031094.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（悪魔族）が３体以上いる場合、または自分の墓地に「キングス・グリード」がある場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル５以上／悪魔族／守備力０または２０００）１体を選んで手札に加える。このターン、自分はモンスター（悪魔族以外）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
