--- a/data/cards/57707471.yaml
+++ b/data/cards/57707471.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero 21: Signora Giustizia Congelata'
   pt: 'Número 21: Justiça da Dama de Gelo'
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>２１ <ruby>氷<rt>ひょう</rt></ruby><ruby>結<rt>けつ</rt></ruby>のレディ・ジャスティス
-  ja_romaji: Nanbāzu Nijūichi Hyōketsu no Redī Jasutisu
+  ja_romaji: Nanbāzu Nijūichi Hyōketsu no Redi Jasutisu
   ko: No.21 빙결의 레이디 저스티스
   ko_rr:
   zh-TW:
