--- a/data/cards/56832966.yaml
+++ b/data/cards/56832966.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero S39: Utopia il Fulmine'
   pt: 'Número S39: Utopia, o Relâmpago'
   ja: <ruby>Ｓ<rt>シャイニング</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>３９ <ruby>希<rt>き</rt></ruby><ruby>望<rt>ぼう</rt></ruby><ruby>皇<rt>おう</rt></ruby>ホープ・ザ・ライトニング
-  ja_romaji: Shainingu Nanbāzu Sanjūkyū Kibōō Hōpu Za Raitonigu
+  ja_romaji: Shainingu Nanbāzu Sanjūkyū Kibōō Hōpu Za Raitoningu
   ko: <ruby>SNo.<rt>샤이닝 넘버즈</rt></ruby>39 유토피아 더 라이트닝
   ko_rr: Syaining Neombeojeu Seoreunahop Yutopia Deo Raiteuning
   zh-TW:
