--- a/data/rush/19587.yaml
+++ b/data/rush/19587.yaml
@@ -41,7 +41,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Band Group
+- Psychic Musician
 images:
 - index: 1
   image: Psychicomposition-RDMRP2-JP-C.png
