--- a/data/rush/16287.yaml
+++ b/data/rush/16287.yaml
@@ -43,7 +43,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Band Group
+- Psychic Musician
 images:
 - index: 1
   image: StardomLight-RDGRP1-JP-C.png
