--- a/data/rush/17018.yaml
+++ b/data/rush/17018.yaml
@@ -43,7 +43,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Band Group
+- Psychic Musician
 images:
 - index: 1
   image: BackBeat-RDKP07-JP-UR.png
