--- a/data/rush/19589.yaml
+++ b/data/rush/19589.yaml
@@ -41,7 +41,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Band Group
+- Psychic Musician
 images:
 - index: 1
   image: MajorAudition-RDMRP2-JP-R.png
