--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1221,7 +1221,7 @@ sets:
     - Prismatic Secret Rare
   zh-TW:
   - set_number: ''
-    set_name: Chinese Weekly Shōnen Jump lottery prize cards
+    set_name: e Jump lottery prize card
     rarities:
     - Ultra Rare
   - set_number: KA-04
