--- a/data/rush/yugipedia1031419.yaml
+++ b/data/rush/yugipedia1031419.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードはマキシマムモンスター１体をリリースして攻撃表示でアドバンス召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（悪魔族）が３体以上いる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のマキシマムモンスター（炎属性）１体を選び、手札に加えるか自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
