--- a/data/rush/18708.yaml
+++ b/data/rush/18708.yaml
@@ -46,6 +46,8 @@ attribute: EARTH
 level: 4
 atk: 900
 def: 400
+series:
+- Goblin
 images:
 - index: 1
   image: GoblinHolediggerCaptain-RDLGP1-JP-C.png
