--- a/data/rush/17223.yaml
+++ b/data/rush/17223.yaml
@@ -46,6 +46,8 @@ attribute: EARTH
 level: 4
 atk: 1000
 def: 1000
+series:
+- Goblin
 images:
 - index: 1
   image: UnfulfilledGoblin-RDGRP1-JP-C.png
