--- a/rush.yaml
+++ b/rush.yaml
@@ -34311,6 +34311,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Goblin
 legend: true
 images:
 - index: 1
@@ -36200,6 +36202,8 @@ attribute: EARTH
 level: 4
 atk: 1000
 def: 1000
+series:
+- Goblin
 images:
 - index: 1
   image: StartupGoblin-RDMAX2-JP-SR.png
@@ -54408,6 +54412,8 @@ attribute: EARTH
 level: 4
 atk: 1000
 def: 1000
+series:
+- Goblin
 images:
 - index: 1
   image: UnfulfilledGoblin-RDGRP1-JP-C.png
@@ -98640,6 +98646,8 @@ attribute: EARTH
 level: 4
 atk: 900
 def: 400
+series:
+- Goblin
 images:
 - index: 1
   image: GoblinHolediggerCaptain-RDLGP1-JP-C.png
