--- a/data/cards/80312545.yaml
+++ b/data/cards/80312545.yaml
@@ -90,6 +90,9 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Normal Parallel Rare
+  - set_number: QCDB-JP056
+    set_name: Quarter Century Duelist Box
+    rarities:
   ko:
   - set_number: SD38-KR020
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
