--- a/data/cards/81034083.yaml
+++ b/data/cards/81034083.yaml
@@ -94,6 +94,9 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Normal Parallel Rare
+  - set_number: QCDB-JP026
+    set_name: Quarter Century Duelist Box
+    rarities:
   ko:
   - set_number: SD38-KR003
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
