--- a/data/cards/99188141.yaml
+++ b/data/cards/99188141.yaml
@@ -40,7 +40,11 @@ series:
 - Huge Revolution
 images:
 - index: 1
+  image: TheHugeRevolutionisOver-SR03-JP-C.png
+  illustration: TheHugeRevolutionisOver-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TheHugeRevolutionisOver-SR03-EN-C-1E.png
+  illustration: TheHugeRevolutionisOver-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ORCS-EN078
