--- a/data/rush/17523.yaml
+++ b/data/rush/17523.yaml
@@ -74,7 +74,7 @@ sets:
     - Ultra Rare
     - Rush Rare
   - set_number: RD/HC01-JP008
-    set_name: High Grade Collection
+    set_name: High-Grade Collection
     rarities:
     - Secret Rare
   ko:
