--- a/data/cards/40640057.yaml
+++ b/data/cards/40640057.yaml
@@ -562,7 +562,7 @@ sets:
     set_name: GU collaboration cards
     rarities:
     - Normal Parallel Rare
-  - set_number: ????-JP???
+  - set_number: SDQC-JP001
     set_name: Yu-Gi-Oh! Sound Duel Quarter Century Selection promotional card
     rarities:
     - Quarter Century Secret Rare
