--- a/data/cards/47132793.yaml
+++ b/data/cards/47132793.yaml
@@ -31,7 +31,7 @@ text:
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: FIRE
-level: 7
+rank: 7
 atk: 2800
 def: 1800
 materials: 2 Level 7 monsters
