--- a/data/cards/87676171.yaml
+++ b/data/cards/87676171.yaml
@@ -39,7 +39,7 @@ text:
 card_type: Monster
 monster_type_line: Aqua / Xyz / Effect
 attribute: LIGHT
-level: 10
+rank: 10
 atk: 2000
 def: 3000
 materials: 2 Level 10 monsters
