--- a/data/cards/08967776.yaml
+++ b/data/cards/08967776.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>時<rt>じ</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby>セフィロン
   ja_romaji: Kyūkyoku Jikaishin Sefiron
   ko: 궁극 시계신 세피론
-  ko_rr:
+  ko_rr: Gunggeuk Singyesin Sepiron
   zh-TW:
   zh-CN: 究极时械神 赛菲隆
 text:
