--- a/data/cards/21088856.yaml
+++ b/data/cards/21088856.yaml
@@ -42,7 +42,11 @@ atk: 1200
 def: 1300
 images:
 - index: 1
+  image: SpyCSpy-DUEA-JP-NR.png
+  illustration: SpyCSpy-TFSP-JP-VG-artwork.png
+- index: '1.1'
   image: SpyCSpy-DUEA-EN-SP-1E.png
+  illustration: SpyCSpy-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DUEA-EN046
