--- a/data/cards/32646477.yaml
+++ b/data/cards/32646477.yaml
@@ -10,7 +10,7 @@ name:
   ja: ダーク・ダイブ・ボンバー
   ja_romaji: Dāku Daibu Bonbā
   ko: 다크 다이브 봄버
-  ko_rr:
+  ko_rr: Dakeu Daibeu Bombeo
   zh-TW:
   zh-CN: 暗黑俯冲轰炸机
 text:
