--- a/data/cards/34471458.yaml
+++ b/data/cards/34471458.yaml
@@ -10,7 +10,7 @@ name:
   ja: フォーチュンレディ・ライティー
   ja_romaji: Fōchun Redi Raitī
   ko: 포츈 레이디 라이티
-  ko_rr:
+  ko_rr: Pochyun Reidi Raiti
   zh-TW:
   zh-CN: 命运女郎·莱蒂
 text:
