--- a/data/cards/39701395.yaml
+++ b/data/cards/39701395.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>調<rt>ちょう</rt></ruby><ruby>和<rt>わ</rt></ruby>の<ruby>宝<rt>ほう</rt></ruby><ruby>札<rt>さつ</rt></ruby>
   ja_romaji: Chōwa no Hōsatsu
   ko: 조화의 패
-  ko_rr:
+  ko_rr: Johwa-ui Pae
   zh-TW: 調和的寶札
   zh-CN: 调和的宝牌
 text:
