--- a/data/cards/51630558.yaml
+++ b/data/cards/51630558.yaml
@@ -10,7 +10,7 @@ name:
   ja: アドバンスドロー
   ja_romaji: Adobansu Dorō
   ko: 어드밴스 드로우
-  ko_rr:
+  ko_rr: Eodeubaenseu Deurou
   zh-TW:
   zh-CN: 上级抽卡
 text:
