--- a/data/cards/52445243.yaml
+++ b/data/cards/52445243.yaml
@@ -10,7 +10,7 @@ name:
   ja: トライエッジ・マスター
   ja_romaji: Toraiejji Masutā
   ko: 트라이에지 마스터
-  ko_rr: teuraieji maseuteo
+  ko_rr: Teuraieoji Maseuteo
   zh-TW:
   zh-CN: 三刃圣手
 text:
