--- a/data/cards/60187739.yaml
+++ b/data/cards/60187739.yaml
@@ -10,7 +10,7 @@ name:
   ja: ワンショット・ブースター
   ja_romaji: Wanshotto Būsutā
   ko: 원샷 부스터
-  ko_rr:
+  ko_rr: Wonsyat Buseuteo
   zh-TW:
   zh-CN: 一击助推士
 text:
