--- a/data/cards/67441435.yaml
+++ b/data/cards/67441435.yaml
@@ -10,7 +10,7 @@ name:
   ja: グローアップ・バルブ
   ja_romaji: Gurōappu Barubu
   ko: 그로우업 벌브
-  ko_rr:
+  ko_rr: Geurou-eop Beolbeu
   zh-TW:
   zh-CN: 成长球茎
 text:
