--- a/data/cards/72885174.yaml
+++ b/data/cards/72885174.yaml
@@ -10,7 +10,7 @@ name:
   ja: フォーチュン・スリップ
   ja_romaji: Fōchun Surippu
   ko: 포츈 슬립
-  ko_rr:
+  ko_rr: Pochyun Seullip
   zh-TW:
   zh-CN: 命运旅行
 text:
