--- a/data/cards/81846453.yaml
+++ b/data/cards/81846453.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>武力<rt>ブリキ</rt></ruby>の<ruby>軍<rt>ぐん</rt></ruby><ruby>奏<rt>そう</rt></ruby>
   ja_romaji: Buriki no Gunsō
   ko: 양철의 군주
-  ko_rr:
+  ko_rr: Yangcheol-ui Gunju
   zh-TW:
   zh-CN: 武力军奏
 text:
