--- a/data/cards/82971335.yaml
+++ b/data/cards/82971335.yaml
@@ -10,7 +10,7 @@ name:
   ja: フォーチュンレディ・アーシー
   ja_romaji: Fōchun Redi Āshī
   ko: 포츈 레이디 어시
-  ko_rr:
+  ko_rr: Pochyun Reidi Eosi
   zh-TW:
   zh-CN: 命运女郎·厄希
 text:
