--- a/data/cards/85775486.yaml
+++ b/data/cards/85775486.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>再<rt>さい</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>動<rt>どう</rt></ruby>
   ja_romaji: Saikidō
   ko: 재기동
-  ko_rr:
+  ko_rr: Jaegidong
   zh-TW:
   zh-CN: 再机动
 text:
