--- a/data/cards/86997073.yaml
+++ b/data/cards/86997073.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>機<rt>き</rt></ruby><ruby>動<rt>どう</rt></ruby><ruby>要<rt>よう</rt></ruby><ruby>塞<rt>さい</rt></ruby>フォルテシモ
   ja_romaji: Kidō Yōsai Foruteshimo
   ko: 기동요새 포르티시모
-  ko_rr:
+  ko_rr: Gidong-yosae Poreutisimo
   zh-TW:
   zh-CN: 机动要塞 极强音
 text:
