--- a/data/cards/94662235.yaml
+++ b/data/cards/94662235.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>運<rt>うん</rt></ruby><ruby>命<rt>めい</rt></ruby><ruby>湾<rt>わん</rt></ruby><ruby>曲<rt>きょく</rt></ruby>
   ja_romaji: Unmei Wankyoku
   ko: 운명만곡
-  ko_rr:
+  ko_rr: Unmyeongman-gok
   zh-TW:
   zh-CN: 命运弯曲
 text:
