--- a/data/cards/26557451.yaml
+++ b/data/cards/26557451.yaml
@@ -39,7 +39,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: DrawDischarge-RIRA-JP-C.png
+  illustration: DrawDischarge-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DrawDischarge-MP20-EN-C-1E.png
+  illustration: DrawDischarge-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: RIRA-EN067
