--- a/data/cards/34408491.yaml
+++ b/data/cards/34408491.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>王<rt>おう</rt></ruby><ruby>龍<rt>りゅう</rt></ruby> ベエルゼ
   ja_romaji: Maōryū Be'eruze
   ko: 마왕룡 베에르제
-  ko_rr:
+  ko_rr: Mawangnyong Beereuje
   zh-TW:
   zh-CN: 魔王龙 蝇王
 text:
