--- a/data/cards/37910722.yaml
+++ b/data/cards/37910722.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>天<rt>てん</rt></ruby><ruby>穹<rt>きゅう</rt></ruby><ruby>覇<rt>は</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>ドラゴアセンション
   ja_romaji: Tenkyūharyū Doragoasenshon
   ko: 천궁패룡 드래고어센션
-  ko_rr:
+  ko_rr: Cheon-gungpaeryong Deuraego-eosensyeon
   zh-TW:
   zh-CN: 天穹霸龙 龙腾
 text:
