--- a/data/cards/41475424.yaml
+++ b/data/cards/41475424.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>機<rt>き</rt></ruby><ruby>限<rt>げん</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>弾<rt>だん</rt></ruby>
   ja_romaji: Kigen Bakudan
   ko: 기한폭탄
-  ko_rr:
+  ko_rr: Gihanpoktan
   zh-TW:
   zh-CN: 机限爆弹
 text:
