--- a/data/cards/74860293.yaml
+++ b/data/cards/74860293.yaml
@@ -10,7 +10,7 @@ name:
   ja: ジャンク・デストロイヤー
   ja_romaji: Janku Desutoroiyā
   ko: 정크 디스트로이어
-  ko_rr:
+  ko_rr: Jeongkeu Diseuteuroieo
   zh-TW:
   zh-CN: 废品破坏神
 text:
