--- a/data/cards/84257639.yaml
+++ b/data/cards/84257639.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>治<rt>ち</rt></ruby><ruby>療<rt>りょう</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Chiryō no Kami Dian Keto
   ko: 치료의 신 다이안 켓
-  ko_rr:
+  ko_rr: Chiryo-ui Sin Daian Ket
   zh-TW: 治療之神 蒂安・凱特
   zh-CN: 治疗之神 迪安·凯特
 text:
