--- a/data/cards/86274272.yaml
+++ b/data/cards/86274272.yaml
@@ -8,7 +8,7 @@ name:
   it: Bestia Spirito Ulti-Apelio
   pt: Besta Espiritual Ulti-Apeleão
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>霊<rt>れい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby> アペライオ
-  ja_romaji: Seireijūki Apelio
+  ja_romaji: Seireijūki Aperaio
   ko: 성령수기 아페라이오
   ko_rr:
   zh-TW:
