--- a/data/cards/96907086.yaml
+++ b/data/cards/96907086.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>旋<rt>せん</rt></ruby><ruby>風<rt>ぷう</rt></ruby>
   ja_romaji: Jibaku Senpū
   ko: 지박선풍
-  ko_rr:
+  ko_rr: Jibakseonpung
   zh-TW:
   zh-CN: 地缚旋风
 text:
