--- a/rush.yaml
+++ b/rush.yaml
@@ -126554,3 +126554,63 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1031419
+---
+konami_id:
+name:
+  en: Soul Knight
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ソウル・ナイト
+  ja_romaji: Souru Naito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Soul Knight" or 1 "Soul Drake" from your Graveyard to your field in face-up Defense Position. Your Level 7 or lower monsters cannot attack this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: LIGHT
+level: 4
+atk: 600
+def: 1100
+images:
+- index: 1
+  image: SoulKnight-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP077
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1031945
