--- a/data/cards/83266006.yaml
+++ b/data/cards/83266006.yaml
@@ -8,7 +8,7 @@ name:
   it: Fantasma incontra Ragazza - Un Manoscritto di Mayakashi
   pt: Fantasma Encontra Garota - Um Manuscrito Mayakashi
   ja: <ruby>逢<rt>おう</rt></ruby><ruby>華<rt>か</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>麗<rt>れい</rt></ruby><ruby>譚<rt>たん</rt></ruby>－<ruby>魔妖<rt>まやかし</rt></ruby><ruby>語<rt>がたり</rt></ruby>
-  ja_romaji: Ōka Yōreitan - Mayakashi-gatari
+  ja_romaji: Ōkayōreitan - Mayakashi-gatari
   ko: 봉화요려담－마요괴이야기
   ko_rr: Bonghwayoryeodam - Mayogoe-iyagi
   zh-TW:
