--- a/data/cards/13965201.yaml
+++ b/data/cards/13965201.yaml
@@ -8,7 +8,7 @@ name:
   it: Fantasma incontra Ragazza - Una Storia degli Shiranui
   pt: Fantasma Encontra Garota - Uma História Shiranui
   ja: <ruby>逢<rt>おう</rt></ruby><ruby>華<rt>か</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>麗<rt>れい</rt></ruby><ruby>譚<rt>たん</rt></ruby>－<ruby>不知火<rt>しらぬい</rt></ruby><ruby>語<rt>がたり</rt></ruby>
-  ja_romaji: Ōka Yōreitan - Shiranui-gatari
+  ja_romaji: Ōkayōreitan - Shiranui-gatari
   ko: 봉화요려담－시라누이이야기
   ko_rr: Bonghwayoryeodam - Siranui-iyagi
   zh-TW:
