--- a/data/cards/62219643.yaml
+++ b/data/cards/62219643.yaml
@@ -8,7 +8,7 @@ name:
   it: Fantasma incontra Ragazza - Una Saga Shiranui il Magistrale Mayakashi
   pt: Fantasma Encontra Garota - Uma Saga Shiranui de um Mayakashi Habilidoso
   ja: <ruby>逢<rt>おう</rt></ruby><ruby>華<rt>か</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>麗<rt>れい</rt></ruby><ruby>譚<rt>たん</rt></ruby>－<ruby>魔妖<rt>まやかし</rt></ruby><ruby>不知火<rt>しらぬい</rt></ruby><ruby>語<rt>がたり</rt></ruby>
-  ja_romaji: Ōka Yōreitan - Mayakashi Shiranui-gatari
+  ja_romaji: Ōkayōreitan - Mayakashi Shiranui-gatari
   ko: 봉화요려담－마요괴시라누이이야기
   ko_rr: Bunghwayoryeodam - Mayogoesiranui-iyagi
   zh-TW:
