--- a/rush.yaml
+++ b/rush.yaml
@@ -64191,7 +64191,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw until you have 5 cards in your hand and reveal all cards in your hand to your opponent. If there is a monster(s) among them, gain LP equal to [the number of those monsters] x 200.
+    Draw until you have 5 cards in your hand and reveal all cards in your hand to your opponent. If a monster(s) is among them, gain LP equal to [the number of those monsters] x 200.
   de:
   es:
   fr:
