--- a/rush.yaml
+++ b/rush.yaml
@@ -126678,3 +126678,172 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1031997
+---
+konami_id:
+name:
+  en: Celeb Revelation
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セレブ・リベレイション
+  ja_romaji: Serebu Ribereishon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack while you have a face-up LIGHT Attribute Spellcaster Type monster on your field, shuffle 1 face-up Equip Spell Card from your field or 4 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return up to 3 Attack Position monsters from your opponent's field to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: CelebRevelation-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP022
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032025
+---
+konami_id:
+name:
+  en: Celeb Blade - Death Wild
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セレブレード・デスワイルド
+  ja_romaji: Sereburēdo Desuwairudo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up LIGHT Attribute Spellcaster Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 400 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If you use the equipped monster as material for a Fusion Summon while you have "Celeb Rose Witch" in your Graveyard, its name can be treated as "Celeb Rose Witch".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: CelebBladeDeathWild-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP086
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032027
+---
+konami_id:
+name:
+  en: Celeb Robe - Death Wind
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セレブローブ・デスワインド
+  ja_romaji: Sereburōbu Desuwaindo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up LIGHT Attribute Spellcaster Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 400 ATK and cannot be destroyed by your opponent's card effects. If you use the equipped monster as material for a Fusion Summon while you have "Celeb Rose Magician" in your Graveyard, its name can be treated as "Celeb Rose Magician".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: CelebRobeDeathWind-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP087
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032028
