--- a/data/cards/84941194.yaml
+++ b/data/cards/84941194.yaml
@@ -8,7 +8,7 @@ name:
   it: Imsety, Gloria di Horus
   pt: Imseti, a Glória de Horus
   ja: ホルスの<ruby>栄<rt>えい</rt></ruby><ruby>光<rt>こう</rt></ruby>－イムセティ
-  ja_romaji:
+  ja_romaji: Horusu no Eikō - Imuseti
   ko: 호루스의 영광－임세티
   ko_rr: Horuseu-ui Yeonggwang - Imseti
   zh-TW:
