--- a/data/rush/yugipedia1031997.yaml
+++ b/data/rush/yugipedia1031997.yaml
@@ -20,19 +20,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札２枚をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. If you Special Summoned a Level 5 or higher monster by this effect, you can add 1 "Fusion" from your Graveyard to your hand.
+    Special Summon 1 LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. If you Special Summoned a Level 5 or higher monster by this effect, you can also add 1 "Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（光属性／魔法使い族）１体を選び、自分フィールドに表側守備表示で特殊召喚する。この効果でモンスター（レベル５以上）を特殊召喚した場合、さらに自分の墓地の「フュージョン」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
