--- a/data/rush/yugipedia1032025.yaml
+++ b/data/rush/yugipedia1032025.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（光属性／魔法使い族）がいる場合、相手モンスターの攻撃宣言時、自分フィールドの表側表示の装備魔法カード１枚または自分の墓地のモンスター（光属性／魔法使い族）４体を持ち主のデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの攻撃表示モンスターを３体まで選んで持ち主の手札に戻す。
   ko:
   zh-TW:
   zh-CN:
