--- a/data/cards/72233469.yaml
+++ b/data/cards/72233469.yaml
@@ -86,6 +86,10 @@ sets:
     - Common
     - Super Rare
     - Secret Rare
+  - set_number: AGF2-KR001
+    set_name: Evil★Twin Duel Set
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
