--- a/rush.yaml
+++ b/rush.yaml
@@ -126855,3 +126855,136 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1032028
+---
+konami_id:
+name:
+  en: Voidvelgr Morgenstein
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・モルゲンスタイン
+  ja_romaji: Voidoverugu Morugensutain
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has a face-down monster on their field, equip this card to 1 face-up Level 7 or higher DARK Attribute Galaxy Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster can attack twice per turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrMorgenstein-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP085
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032130
+---
+konami_id:
+name:
+  en: Voidvelgr Chaosmachia
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・カオスマキア
+  ja_romaji: Voidoverugu Kaosumakia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 DARK Attribute monsters with different Types from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle up to 2 face-up cards from your opponent's field into the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 3400
+def: 2500
+materials:
+  en: |-
+    "Voidvelgr Requiem" + 1 Level 8 or higher DARK Attribute monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrChaosmachia-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP019
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032131
