--- a/rush.yaml
+++ b/rush.yaml
@@ -126878,7 +126878,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに裏側表示モンスターがいる場合、自分フィールドの表側表示モンスター（レベル７以上／闇属性／ギャラクシー族）１体に装備できる。
   ko:
   zh-TW:
   zh-CN:
@@ -126890,7 +126891,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    装備モンスターは１ターンに２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -126936,7 +126938,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の種族が異なるモンスター（闇属性）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -126948,7 +126951,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示のカードを２枚まで選んで持ち主のデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -126966,7 +126970,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ヴォイドヴェルグ・レクイエム」＋モンスター（レベル８以上／闇属性）
   ko:
   zh-TW:
   zh-CN:
