--- a/data/rush/16998.yaml
+++ b/data/rush/16998.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: Versus Pack Maximum Force
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP079
+    set_name: High-Grade Collection
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP07-KR032
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
