--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -48,13 +48,13 @@ jobs:
       - run: pip install -r yaml-yugi/src/requirements.txt
       - name: Transform (series)
         working-directory: yaml-yugi/data/series
-        run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/archetypes
+        run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/TCG_and_OCG_archetypes
       - name: Transform (OCG+TCG)
         working-directory: yaml-yugi/data/cards
         run: |
           git rm --ignore-unmatch kdb*.json kdb*.yaml yugipedia*.json yugipedia*.yaml
           python3 ../../src/main_ocgtcg.py \
-            ../../../yaml-yugipedia/wikitext/cards \
+            ../../../yaml-yugipedia/wikitext/Duel_Monsters_cards \
             --zh-CN ../../../yaml-yugi-zh/zh-CN \
             --assignments ../../src/assignments/assignments.yaml \
             --tcg ../../../tcg.vector.json \
@@ -70,7 +70,7 @@ jobs:
         run: |
           git rm --ignore-unmatch yugipedia*.json yugipedia*.yaml
           python3 ../../src/main_rush.py \
-            ../../../yaml-yugipedia/wikitext/rush \
+            ../../../yaml-yugipedia/wikitext/Rush_Duel_cards \
             --ko-override ../../../yaml-yugi-ko/rush-override.csv \
             --ko-prerelease ../../../yaml-yugi-ko/rush-prerelease.csv \
             --aggregate ../../../aggregate/rush.json
@@ -79,7 +79,7 @@ jobs:
         run: |
           git rm --ignore-unmatch *.json *.yaml
           python3 ../../src/main_speed.py \
-            ../../../yaml-yugipedia/wikitext/speed \
+            ../../../yaml-yugipedia/wikitext/Skill_Cards \
             --aggregate ../../../aggregate/skill.json
       - id: commit
         uses: ./yaml-yugi/.github/actions/commit-push
@@ -93,7 +93,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
       - name: Transform (Master Duel)
         working-directory: yaml-yugi
-        run: python src/main_masterduel.py ../yaml-yugipedia/wikitext/master-duel-cards > ../aggregate/master-duel-raw.json
+        run: python src/main_masterduel.py '../yaml-yugipedia/wikitext/Yu-Gi-Oh!_Master_Duel_cards' > ../aggregate/master-duel-raw.json
       - if: steps.commit.outputs.status > 0
         working-directory: yaml-yugi
         name: Merge
