--- a/rush.yaml
+++ b/rush.yaml
@@ -116372,6 +116372,83 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1021590
 ---
+konami_id: 19455
+name:
+  en: Transamu Valuable Rainac
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・<ruby>Ｖ<rt>ヴァリュアブル</rt></ruby>・ライナック
+  ja_romaji: Toranzamu Varyuaburu Rainakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 Galaxy Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地のモンスター（ギャラクシー族）２体をデッキに戻して発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 1400 ATK until the end of this turn. Then, if you shuffled 2 Level 7 Effect Monsters to meet the requirement, this turn, this card cannot be destroyed by battle or your opponent's Trap Card effects, and can attack twice.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードの攻撃力はターン終了時まで１４００アップする。この効果の条件で効果モンスター（レベル７）２体を戻した場合、さらにこのターン、このカードは戦闘と相手の罠カードの効果では破壊されず、２回攻撃できる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 2900
+def: 1600
+materials:
+  en: |-
+    "Transamu Rainac" + 1 Level 7 LIGHT Attribute Galaxy Type monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    「トランザム・ライナック」＋モンスター（レベル７／光属性／ギャラクシー族）
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuValuableRainac-RDCGR3-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/CGR3-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Volume 3 promotional card
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1028876
+---
 konami_id: 19538
 name:
   en: Royal Rebel's Beginitar
@@ -124722,6 +124799,83 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1019081
 ---
+konami_id: 19760
+name:
+  en: Cul-de-sac the Faceless
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>無<rt>む</rt></ruby><ruby>貌<rt>ぼう</rt></ruby>のカルドサック
+  ja_romaji: Mubō no Karudosakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Special Summon this card from your hand face-up to your field by revealing 1 other Fiend Type monster in your hand to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカード以外の手札のモンスター（悪魔族）１体を相手に見せ、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    なし
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Face-up Fiend Type monsters on your field gain 300 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター（悪魔族）の攻撃力は３００アップする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: LIGHT
+level: 6
+atk: 1500
+def: 0
+images:
+- index: 1
+  image: CuldesactheFaceless-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP034
+    set_name: Saikyō Jump January 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1025111
+---
 konami_id:
 name:
   en: Seiyaryu
@@ -125040,83 +125194,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023694
----
-konami_id:
-name:
-  en: Cul-de-sac the Faceless
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: <ruby>無<rt>む</rt></ruby><ruby>貌<rt>ぼう</rt></ruby>のカルドサック
-  ja_romaji: Mubō no Karudosakku
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-summoning_condition:
-  en: |-
-    You can Special Summon this card from your hand face-up to your field by revealing 1 other Fiend Type monster in your hand to your opponent.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    このカード以外の手札のモンスター（悪魔族）１体を相手に見せ、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
-  ko:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    None
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    なし
-  ko:
-  zh-TW:
-  zh-CN:
-effect_types:
-- Continuous
-effect:
-  en: |-
-    Face-up Fiend Type monsters on your field gain 300 ATK.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分フィールドの表側表示モンスター（悪魔族）の攻撃力は３００アップする。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Fiend / Effect
-attribute: LIGHT
-level: 6
-atk: 1500
-def: 0
-images:
-- index: 1
-  image: CuldesactheFaceless-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP034
-    set_name: Saikyō Jump January 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1025111
 ---
 konami_id:
 name:
@@ -125504,83 +125581,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1027880
----
-konami_id:
-name:
-  en: Transamu Valuable Rainac
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: トランザム・<ruby>Ｖ<rt>ヴァリュアブル</rt></ruby>・ライナック
-  ja_romaji: Toranzamu Varyuaburu Rainakku
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Shuffle 2 Galaxy Type monsters from your Graveyard into the Deck.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分の墓地のモンスター（ギャラクシー族）２体をデッキに戻して発動できる。
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    This card gains 1400 ATK until the end of this turn. Then, if you shuffled 2 Level 7 Effect Monsters to meet the requirement, this turn, this card cannot be destroyed by battle or your opponent's Trap Card effects, and can attack twice.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    このカードの攻撃力はターン終了時１４００アップする。この効果の条件で効果モンスター（レベル７）２体を戻した場合、さらにこのターン、このカードは戦闘と相手の罠カードの効果では破壊されず、２回攻撃できる。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Fusion / Effect
-attribute: LIGHT
-level: 9
-atk: 2900
-def: 1600
-materials:
-  en: |-
-    "Transamu Rainac" + 1 Level 7 LIGHT Attribute Galaxy Type monster
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    「トランザム・ライナック」＋モンスター（レベル７／光属性／ギャラクシー族）
-  ko:
-  zh-TW:
-  zh-CN:
-series:
-- Transamu
-images:
-- index: 1
-  image: TransamuValuableRainac-RDCGR3-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/CGR3-JP001
-    set_name: Yu-Gi-Oh! GO RUSH!! Volume 3 promotional card
-    rarities:
-    - Ultra Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1028876
 ---
 konami_id:
 name:
