--- a/data/rush/17507.yaml
+++ b/data/rush/17507.yaml
@@ -55,6 +55,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/HC01-JP051
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR021
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
