--- a/rush.yaml
+++ b/rush.yaml
@@ -61697,6 +61697,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/HC01-JP051
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR021
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -126997,3 +127002,63 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1032131
+---
+konami_id:
+name:
+  en: Jespell Wizard
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジェスペル・ウィザード
+  ja_romaji: Jesuperu Wizādo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: ??? / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 600
+images:
+- index: 1
+  image: JespellWizard-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP035
+    set_name: Saikyō Jump February 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032439
