--- a/data/cards/yugipedia1022443.yaml
+++ b/data/cards/yugipedia1022443.yaml
@@ -31,6 +31,9 @@ attribute: FIRE
 level: 4
 atk: 1800
 def: 1400
+images:
+- index: 1
+  image: ElectroGunner-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP004
