--- a/data/cards/yugipedia1032383.yaml
+++ b/data/cards/yugipedia1032383.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 石油採掘
-  ja_romaji:
+  ja: <ruby>石<rt>せき</rt></ruby><ruby>油<rt>ゆ</rt></ruby><ruby>採<rt>さい</rt></ruby><ruby>掘<rt>くつ</rt></ruby>
+  ja_romaji: Sekiyu Saikutsu
   ko:
   ko_rr:
   zh-TW:
@@ -27,6 +27,9 @@ text:
   zh-CN:
 card_type: Spell
 property: Normal
+images:
+- index: 1
+  image: Oil-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP006
