--- a/data/cards/yugipedia1032385.yaml
+++ b/data/cards/yugipedia1032385.yaml
@@ -29,6 +29,9 @@ card_type: Spell
 property: Normal
 series:
 - Synchro
+images:
+- index: 1
+  image: SynchroCreed-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP009
