--- a/data/cards/yugipedia1032394.yaml
+++ b/data/cards/yugipedia1032394.yaml
@@ -31,6 +31,9 @@ attribute: LIGHT
 level: 2
 atk: 300
 def: 100
+images:
+- index: 1
+  image: ElectrodeBeastAnion-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP013
