--- a/data/cards/yugipedia1032396.yaml
+++ b/data/cards/yugipedia1032396.yaml
@@ -29,6 +29,9 @@ card_type: Spell
 property: Normal
 series:
 - Relinquished
+images:
+- index: 1
+  image: SacrificeLevelUp-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP014
