--- a/data/cards/yugipedia1032398.yaml
+++ b/data/cards/yugipedia1032398.yaml
@@ -29,6 +29,9 @@ card_type: Trap
 property: Continuous
 series:
 - Synchro
+images:
+- index: 1
+  image: SynchroPanic-24PP-JP-OP.png
 sets:
   ja:
   - set_number: 24PP-JP017
