--- a/data/cards/00035699.yaml
+++ b/data/cards/00035699.yaml
@@ -8,7 +8,7 @@ name:
   it: Dormiente SPIARALE
   pt: ESPIRÃO Dormente
   ja: <ruby>ＳＰＹＲＡＬ<rt>スパイラル</rt></ruby>－ボルテックス
-  ja_romaji: SPYRAL - Borutekkusu
+  ja_romaji: Supairaru - Borutekkusu
   ko: <ruby>SPYRAL<rt>스파이랄</rt></ruby>－보텍스
   ko_rr:
   zh-TW:
