--- a/data/cards/04896788.yaml
+++ b/data/cards/04896788.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 强欲之壶的精灵
 text:
   en: |-
-    While this card is in face-up Attack Position on the field, if a player activates "Pot of Greed", they can draw 1 more card.
+    If a player activates "Pot of Greed": Activate this effect; they can draw 1 card. This card must be in face-up Attack Position to activate and to resolve this effect.
   de: |-
     Wenn sich diese Karte offen in Angriffsposition auf dem Spielfeld befindet und ein Spieler "Topf der Gier" aktiviert, kann er 1 weitere Karte ziehen.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Greed
 images:
 - index: 1
-  image: SpiritofthePotofGreed-IOC-EN-C-UE-25thAnniversaryEdition.png
+  image: SpiritofthePotofGreed-TBC1-EN-UPR-LE.png
 sets:
   en:
   - set_number: DR2-EN009
