--- a/data/cards/51790181.yaml
+++ b/data/cards/51790181.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 无欲之壶
 text:
   en: |-
-    Select 2 cards from the Graveyard(s), and shuffle them into their owner's Deck(s). After activation, remove this card from play instead of sending it to the Graveyard. You can only activate 1 "Pot of Benevolence" per turn.
+    Target 2 cards in the GY(s); shuffle them into the Deck(s). After activation, banish this card instead of sending it to the GY. You can only activate 1 "Pot of Benevolence" per turn.
   de: |-
     Wähle 2 Karten in beliebigen Friedhöfen und mische sie in die Decks ihrer Besitzer zurück. Entferne diese Karte nach ihrer Aktivierung aus dem Spiel, anstatt sie auf den Friedhof zu legen. Du kannst nur 1 "Topf der Güte" pro Spielzug aktivieren.
   es: |-
@@ -40,7 +40,7 @@ series:
 - Greed
 images:
 - index: 1
-  image: PotofBenevolence-ABPF-EN-SP-UE.png
+  image: PotofBenevolence-TBC1-EN-UPR-LE.png
 sets:
   en:
   - set_number: ABPF-EN061
