--- a/data/cards/70278545.yaml
+++ b/data/cards/70278545.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 谦虚之壶
 text:
   en: |-
-    Return 2 cards from your hand to your Deck. Then shuffle your Deck.
+    Shuffle 2 cards from your hand into the Deck.
   de: |-
     Lege 2 Karten aus deiner Hand zurück auf dein Deck. Mische dein Deck anschließend.
   es: |-
@@ -40,7 +40,7 @@ series:
 - Greed
 images:
 - index: 1
-  image: PotofGenerosity-DR04-NA-C-UE.png
+  image: PotofGenerosity-TBC1-EN-UPR-LE.png
 sets:
   en:
   - set_number: CRV-EN043
