--- a/data/cards/84569017.yaml
+++ b/data/cards/84569017.yaml
@@ -8,7 +8,7 @@ name:
   it: Soldato Arpione
   pt:
   ja: スピアフィッシュソルジャー
-  ja_romaji: Supiāfishu Sorujā
+  ja_romaji: Supiafisshu Sorujā
   ko: 스피어피시 솔저
   ko_rr:
   zh-TW:
