--- a/data/cards/22026707.yaml
+++ b/data/cards/22026707.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma cortina que é produzido por um mago, dizem que aumenta o poder negro.
   ja: |-
-    魔術師がつくりだしたカーテン。魔法使いの力が上がるという。
+    <ruby>魔<rt>ま</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby>がつくりだしたカーテン。<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>いの力が上がるという。
   ko: |-
     마술사가 만들어낸 커튼. 마법사의 힘을 올려준다고 한다.
   zh-TW: |-
