--- a/data/cards/53581214.yaml
+++ b/data/cards/53581214.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um ceifador com uma flecha flamejante que queima os inimigos até transformá-los em cinzas.
   ja: |-
-    炎の矢を手にする死神。その矢にあたると火だるまになる。
+    <ruby>炎<rt>ほのお</rt></ruby>の<ruby>矢<rt>や</rt></ruby>を<ruby>手<rt>て</rt></ruby>にする<ruby>死<rt>しに</rt></ruby><ruby>神<rt>がみ</rt></ruby>。その<ruby>矢<rt>や</rt></ruby>にあたると<ruby>火<rt>ひ</rt></ruby>だるまになる。
   ko: |-
     화염의 화살을 손에 든 사신. 그 화살에 맞으면 불덩어리가 된다.
   zh-TW: |-
