--- a/data/cards/64511793.yaml
+++ b/data/cards/64511793.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este guerreiro se transforma em diversas criaturas para confundir os inimigos nas batalhas.
   ja: |-
-    いろんな奴に変身して、相手をだましながら戦う戦士。
+    いろんな<ruby>奴<rt>やつ</rt></ruby>に<ruby>変<rt></rt></ruby><ruby>身<rt></rt></ruby>して、<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>をだましながら<ruby>戦<rt>たたか</rt></ruby>う<ruby>戦<rt>せん</rt></ruby><ruby>士<rt>し</rt></ruby>。
   ko: |-
     여러가지 모습으로 변신해, 상대를 속이면서 싸우는 전사.
   zh-TW: |-
