--- a/data/rush/17547.yaml
+++ b/data/rush/17547.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict damage to your opponent equal to [the Level of 1 face-up monster on your opponent's field] x 100.
+    Inflict damage to your opponent equal to [the Level of 1 face-up monster on their field] x 100.
   de:
   es:
   fr:
