--- a/data/rush/yugipedia1029977.yaml
+++ b/data/rush/yugipedia1029977.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
