--- a/data/rush/yugipedia1029980.yaml
+++ b/data/rush/yugipedia1029980.yaml
@@ -51,6 +51,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
