--- a/data/rush/yugipedia1030949.yaml
+++ b/data/rush/yugipedia1030949.yaml
@@ -64,6 +64,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
