--- a/data/rush/yugipedia1030956.yaml
+++ b/data/rush/yugipedia1030956.yaml
@@ -51,6 +51,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
