--- a/data/rush/yugipedia1031094.yaml
+++ b/data/rush/yugipedia1031094.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
