--- a/rush.yaml
+++ b/rush.yaml
@@ -64472,7 +64472,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict damage to your opponent equal to [the Level of 1 face-up monster on your opponent's field] x 100.
+    Inflict damage to your opponent equal to [the Level of 1 face-up monster on their field] x 100.
   de:
   es:
   fr:
@@ -104330,7 +104330,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    You take no damage from your opponent's card effects during your opponent's Main Phase only.
+    You take no damage from your opponent's card effects during their Main Phase only.
   de:
   es:
   fr:
@@ -110624,7 +110624,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 random card from your opponent's hand to the Graveyard. Then, if you sent a monster to the Graveyard by this effect, inflict damage to your opponent equal to [that monster's Level] x 100.
+    Send 1 random card from your opponent's hand to the Graveyard. Then, if you sent a monster to the Graveyard by this effect, inflict damage to your opponent equal to [its Level] x 100.
   de:
   es:
   fr:
@@ -125771,6 +125771,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -125891,6 +125892,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -125949,6 +125951,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -126226,6 +126229,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126351,6 +126355,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -126477,6 +126482,7 @@ sets:
     set_name: High-Grade Collection
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
