--- a/data/cards/47695416.yaml
+++ b/data/cards/47695416.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Decidirá o destino de um oponente quando a chama da vela em seus dedos se extinguir.
   ja: |-
-    <ruby>指<rt>ゆび</rt></ruby><ruby>先<rt>さき</rt></ruby>の炎が<ruby>消<rt>き</rt></ruby>えたとき、<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>の<ruby>運<rt>うん</rt></ruby><ruby>命<rt>めい</rt></ruby>が<ruby>決<rt>けっ</rt></ruby><ruby>定<rt>てい</rt></ruby>する。
+    指先の炎が消えたとき、相手の運命が決定する。
   ko: |-
     손끝의 불꽃이 꺼질 때, 상대의 운명이 결정된다.
   zh-TW: |-
