--- a/data/rush/16998.yaml
+++ b/data/rush/16998.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as that card in their Graveyard, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as it in their Graveyard, you can destroy that card.
   de:
   es:
   fr:
