--- a/data/rush/18777.yaml
+++ b/data/rush/18777.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as that monster's original DEF in their Graveyard, you can destroy that monster.
+    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as its original DEF in their Graveyard, you can destroy that monster.
   de:
   es:
   fr:
