--- a/rush.yaml
+++ b/rush.yaml
@@ -49983,7 +49983,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as that card in their Graveyard, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as it in their Graveyard, you can destroy that card.
   de:
   es:
   fr:
@@ -101171,7 +101171,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as that monster's original DEF in their Graveyard, you can destroy that monster.
+    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as its original DEF in their Graveyard, you can destroy that monster.
   de:
   es:
   fr:
@@ -114724,7 +114724,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict damage to your opponent equal to [the number of cards in their hand] x 300. Then, if you activated this card when a card was sent from the Deck to your opponent's Graveyard, send 1 random card from your opponent's hand to the Graveyard.
+    Inflict damage to your opponent equal to [the number of cards in their hand] x 300. Then, if you activated this card when a card(s) was sent from the Deck to your opponent's Graveyard, send 1 random card from your opponent's hand to the Graveyard.
   de:
   es:
   fr:
