--- a/data/cards/15507080.yaml
+++ b/data/cards/15507080.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este feiticeiro trabalha na escuridão e é servido por uma mão sinistra que puxa seus inimigos para o esquecimento.
   ja: |-
-    闇を崇拝する魔法使い。魔の手を呼び出し暗闇へ引きずり込む。
+    <ruby>闇<rt>やみ</rt></ruby>を<ruby>崇<rt>すう</rt></ruby><ruby>拝<rt>はい</rt></ruby>する<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>使<rt>つか</rt></ruby>い。<ruby>魔<rt>ま</rt></ruby>の<ruby>手<rt>て</rt></ruby>を<ruby>呼<rt>よ</rt></ruby>び<ruby>出<rt>だ</rt></ruby>し<ruby>暗<rt>くら</rt></ruby><ruby>闇<rt>やみ</rt></ruby>へ<ruby>引<rt>ひ</rt></ruby>きずり<ruby>込<rt>こ</rt></ruby>む。
   ko: |-
     어둠을 숭배하는 마법사. 마의 손을 불러내어 암흑으로 끌어들인다.
   zh-TW: |-
