--- a/data/cards/yugipedia1032388.yaml
+++ b/data/cards/yugipedia1032388.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    You can banish 1 monster you control and 1 "Power Tool" Synchro Monster or 1 Level 7 or 8 Dragon Synchro Monster in your GY, then target 1 card your opponent controls; destroy it. Level 7 or higher Synchro Monsters you control gain 400 ATK for each of your banished Level 7 or higher Synchro Monsters. Once per turn, when an opponent’s monster declares an attack while you have a banished Synchro Monster: You can negate the attack.
   de:
   es:
   fr:
@@ -35,6 +35,10 @@ sets:
   - set_number: 24PP-JP010
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
