--- a/data/cards/yugipedia1032390.yaml
+++ b/data/cards/yugipedia1032390.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    If a monster(s) on the field Special Summoned from the Extra Deck is destroyed by card effect: You can target 1 of them; each player takes damage equal to half its ATK. When your DARK Synchro Monster Special Summoned from the Extra Deck is targeted for an attack: You can target 1 card on the field; destroy it. You can only use each effect of "Earthbound Resonance" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,10 @@ sets:
   - set_number: 24PP-JP011
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
