--- a/data/cards/39175982.yaml
+++ b/data/cards/39175982.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Poucos podem resistir aos ataques dos braços em forma de foice dessa criatura perigosa.
   ja: |-
-    カマのように発達した腕を振り回し攻撃してくる。
+    カマのように<ruby>発<rt>はっ</rt></ruby><ruby>達<rt>たつ</rt></ruby>した<ruby>腕<rt>うで</rt></ruby>を<ruby>振<rt>ふ</rt></ruby>り<ruby>回<rt>まわ</rt></ruby>し<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>してくる。
   ko: |-
     낫 모양으로 발달한 팔을 휘둘러 공격해온다.
   zh-TW: |-
