--- a/data/cards/46718686.yaml
+++ b/data/cards/46718686.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um furioso peixe estrela que cospe um ácido letal que pode derreter quase qualquer coisa.
   ja: |-
-    汚染された水で狂暴化したヒトデ。口から溶解液をはく。
+    <ruby>汚<rt>お</rt></ruby><ruby>染<rt>せん</rt></ruby>された<ruby>水<rt>みず</rt></ruby>で<ruby>狂<rt>きょ</rt></ruby><ruby>暴<rt>うぼう</rt></ruby><ruby>化<rt>か</rt></ruby>したヒトデ。<ruby>口<rt>くち</rt></ruby>から<ruby>溶<rt>よう</rt></ruby><ruby>解<rt>かい</rt></ruby><ruby>液<rt>えき</rt></ruby>をはく。
   ko: |-
     오염된 물 때문에 광포해진 불가사리. 입에서 용해액을 내뿜는다.
   zh-TW: |-
