--- a/data/cards/yugipedia1022443.yaml
+++ b/data/cards/yugipedia1022443.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    If you Normal or Special Summon a FIRE monster(s): You can Special Summon this card from your hand, then you can send 1 Level 8 Pyro monster from your Deck to the GY. You can only use this effect of "Electro Gunner" once per turn. Once per turn, if a Spell Card is activated: You can make all FIRE monsters you currently control gain 300 ATK.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 24PP-JP004
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
