--- a/data/cards/yugipedia1032380.yaml
+++ b/data/cards/yugipedia1032380.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    You can Tribute all face-up "Division" you control; Special Summon "Machine Tokens" (Machine/FIRE/Level 1/ATK 200/DEF 200) up to twice the number Tributed. Each time 1 is destroyed, your opponent takes 500 damage. If this card is banished: You can target any number of Tokens you control; destroy them. You can only use each effect of "Division" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 24PP-JP005
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
