--- a/data/cards/yugipedia1032383.yaml
+++ b/data/cards/yugipedia1032383.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    Target up to 2 Level 4 or lower FIRE monsters with different names in your GY; add them to your hand. You can only activate 1 "Oil" per turn.
   de:
   es:
   fr:
@@ -35,6 +35,10 @@ sets:
   - set_number: 24PP-JP006
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
