--- a/data/cards/yugipedia1032392.yaml
+++ b/data/cards/yugipedia1032392.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    If this card is Normal Summoned: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT Xyz Monsters, also add 1 "Electrode Beast Anion" from your Deck or GY to your hand, then, immediately after this effect resolves, you can Normal Summon 1 Level 4 or lower Thunder monster. You can target 1 other Thunder monster you control; this card's Level becomes the same as that monster's, until the end of this turn. You can only use each effect of "Electrode Beast Anion" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 24PP-JP012
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
