--- a/data/cards/yugipedia1032394.yaml
+++ b/data/cards/yugipedia1032394.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    If this card is Normal Summoned: You can make this card become Level 4, then you can add 1 "Spirit Converter" from your Deck or GY to your hand. You can target 1 other card you control; send both it and this card to the GY, and if you do, draw 1 card. You can only use each effect of "Electrode Beast Anion" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 24PP-JP013
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
