--- a/data/cards/yugipedia1032396.yaml
+++ b/data/cards/yugipedia1032396.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    Target 1 Xyz Monster you control; banish 2 of its materials, and if you do, Special Summon from your Extra Deck, 1 Xyz Monster that is 1 Rank higher than that monster, but it cannot attack this turn. You can only activate 1 "Sacrifice Level-Up" per turn.
   de:
   es:
   fr:
@@ -37,6 +37,10 @@ sets:
   - set_number: 24PP-JP014
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
