--- a/data/cards/yugipedia1032398.yaml
+++ b/data/cards/yugipedia1032398.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    Destroy this card during your 3rd Standby Phase after activation. If face-up Synchro Monster(s) you control is destroyed by battle or an opponent's card effect: Activate this card by targeting 1 of them; Special Summon 1 Tuner and any number of non-Tuners from your GY, whose total Levels equal that monster's, and if you do, they cannot be destroyed by battle or card effects this turn. Neither player can Synchro Summon.
   de:
   es:
   fr:
@@ -37,6 +37,10 @@ sets:
   - set_number: 24PP-JP017
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
