--- a/data/cards/yugipedia1032390.yaml
+++ b/data/cards/yugipedia1032390.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a monster(s) on the field Special Summoned from the Extra Deck is destroyed by card effect: You can target 1 of them; each player takes damage equal to half its ATK. When your DARK Synchro Monster Special Summoned from the Extra Deck is targeted for an attack: You can target 1 card on the field; destroy it. You can only use each effect of "Earthbound Resonance" once per turn.
+    If a monster(s) Special Summoned from the Extra Deck is destroyed by card effect: You can target 1 of them; each player takes damage equal to half its ATK. When your DARK Synchro Monster Special Summoned from the Extra Deck is targeted for an attack: You can target 1 card on the field; destroy it. You can only use each effect of "Earthbound Resonance" once per turn.
   de:
   es:
   fr:
