--- a/data/cards/34225426.yaml
+++ b/data/cards/34225426.yaml
@@ -39,7 +39,11 @@ series:
 - Tearlaments
 images:
 - index: 1
+  image: TearlamentsPerlegia-PHHY-JP-R.png
+  illustration: TearlamentsPerlegia-OW.png
+- index: '1.1'
   image: TearlamentsPerlegia-PHHY-EN-C-1E.png
+  illustration: TearlamentsPerlegia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHHY-EN061
