--- a/data/cards/yugipedia1032392.yaml
+++ b/data/cards/yugipedia1032392.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal Summoned: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT Xyz Monsters, also add 1 "Electrode Beast Anion" from your Deck or GY to your hand, then, immediately after this effect resolves, you can Normal Summon 1 Level 4 or lower Thunder monster. You can target 1 other Thunder monster you control; this card's Level becomes the same as that monster's, until the end of this turn. You can only use each effect of "Electrode Beast Anion" once per turn.
+    If this card is Normal Summoned: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT Xyz Monsters, also add 1 "Electrode Beast Anion" from your Deck or GY to your hand, then, immediately after this effect resolves, you can Normal Summon 1 Level 4 or lower Thunder monster. You can target 1 other Thunder monster you control that has a Level; this card's Level becomes that monster's until the end of this turn. You can only use each effect of "Electrode Beast Cation" once per turn.
   de:
   es:
   fr:
