--- a/rush.yaml
+++ b/rush.yaml
@@ -41565,7 +41565,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up monster on your opponent's field. This turn, while that monster is face-up, your opponent cannot Tribute it for a Tribute Summon.
+    Choose 1 face-up monster on your opponent's field. This turn, while that monster is face-up, your opponent cannot Tribute that monster for a Tribute Summon.
   de:
   es:
   fr:
@@ -51894,7 +51894,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up monster on your opponent's field with the highest ATK. Draw 1 card and show it. Then, if that card is "Umi" or "Big Umi", inflict 500 damage to your opponent.
+    Destroy 1 face-up monster with the highest ATK on your opponent's field. Draw 1 card and show it. If that card is "Umi" or "Big Umi", inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -53293,7 +53293,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card, and send the top card of your Deck to the Graveyard. If you sent a monster to the Graveyard by this effect, you can destroy 2 face-up monsters on your opponent's field with the same Type as that monster.
+    Draw 1 card, and send the top card of your Deck to the Graveyard. If you sent a monster to the Graveyard by this effect, you can destroy 2 face-up monsters on your opponent's field with the same Type as it.
   de:
   es:
   fr:
@@ -60280,7 +60280,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 monster on your opponent's field, and toss a coin 3 times. If at least 2 of the results are heads, destroy that monster.
+    Choose 1 monster on your opponent's field, and toss a coin 3 times. If at least 2 of the results are heads, destroy it.
   de:
   es:
   fr:
@@ -60298,6 +60298,8 @@ attribute: DARK
 level: 7
 atk: 2600
 def: 2200
+series:
+- Gun Dragon
 legend: true
 images:
 - index: 1
@@ -62274,7 +62276,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 300 ATK until the end of this turn. Then, you can make that monster become Insect Type until the end of this turn.
+    1 face-up monster on your opponent's field loses 300 ATK until the end of this turn. Then, you can make it become Insect Type until the end of this turn.
   de:
   es:
   fr:
@@ -76773,7 +76775,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 card on your opponent's field, and toss a coin twice. If the result is 2 heads, destroy that card.
+    Choose 1 card on your opponent's field, and toss a coin twice. If the result is 2 heads, destroy it.
   de:
   es:
   fr:
@@ -76791,6 +76793,8 @@ attribute: DARK
 level: 4
 atk: 1700
 def: 200
+series:
+- Gun Dragon
 legend: true
 images:
 - index: 1
@@ -87283,7 +87287,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 5 or higher Machine Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, if that monster is LIGHT Attribute, draw 1 card.
+    1 face-up Level 5 or higher Machine Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, if it is LIGHT Attribute, draw 1 card.
   de:
   es:
   fr:
@@ -89784,7 +89788,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
+    Send the top card of your Deck to the Graveyard. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with it during their next turn.
   de:
   es:
   fr:
@@ -90525,7 +90529,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
+    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. It gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
   de:
   es:
   fr:
@@ -90667,7 +90671,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 Spell/Trap Card in your opponent's Graveyard. Your opponent Sets that card on their field. Then, you can add 1 Level 7 or higher EARTH Attribute Machine Type monster from your Graveyard to your hand.
+    Choose 1 Spell/Trap Card in your opponent's Graveyard. Your opponent Sets it on their field. Then, you can add 1 Level 7 or higher EARTH Attribute Machine Type monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -91781,7 +91785,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, that monster loses 2000 DEF until the end of this turn.
+    Change 1 Attack Position monster on your opponent's field to face-up Defense Position. Then, it loses 2000 DEF until the end of this turn.
   de:
   es:
   fr:
@@ -92357,7 +92361,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Stray Force" from your Graveyard in your Spell & Trap Zone. Then, you can choose 1 face-up Level 7 or higher monster with 200 DEF on your field. If you do, that monster can attack twice during this turn.
+    Set 1 "Stray Force" from your Graveyard in your Spell & Trap Zone. Then, you can choose 1 face-up Level 7 or higher monster with 200 DEF on your field. If you do, it can attack twice during this turn.
   de:
   es:
   fr:
@@ -100536,7 +100540,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can choose 1 monster in Maximum Mode on your field. If you do, while that monster is face-up, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    Draw 1 card. Then, you can choose 1 monster in Maximum Mode on your field. If you do, while it is face-up, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -101576,7 +101580,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
+    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if it is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
   de:
   es:
   fr:
@@ -102416,7 +102420,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can Special Summon that monster face-up to your field. Then, inflict damage to your opponent equal to [its original ATK].
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can Special Summon it face-up to your field. Then, inflict damage to your opponent equal to [its original ATK].
   de:
   es:
   fr:
@@ -102629,7 +102633,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Voidvelgr Requiem" or 1 "Voidvelgr Chrysaor" from your Graveyard to your hand. Then, you can choose 1 face-up card on your field. If you do, that card cannot be destroyed by card effects this turn.
+    Add 1 "Voidvelgr Requiem" or 1 "Voidvelgr Chrysaor" from your Graveyard to your hand. Then, you can choose 1 face-up card on your field. If you do, it cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
@@ -103359,7 +103363,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if that card is a Spell Card, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if it is a Spell Card, you can destroy it.
   de:
   es:
   fr:
@@ -103515,7 +103519,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent chooses 1 card on their field, and you destroy that card.
+    Your opponent chooses 1 card on their field, and you destroy it.
   de:
   es:
   fr:
@@ -107723,7 +107727,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
+    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with it during their next turn.
   de:
   es:
   fr:
@@ -113255,7 +113259,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down card on your opponent's field. Then, if that card is a Monster Card with 1500 or more DEF, you can destroy it.
+    Look at 1 face-down card on your opponent's field. Then, if it is a Monster Card with 1500 or more DEF, you can destroy it.
   de:
   es:
   fr:
@@ -116630,7 +116634,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, that monster cannot be destroyed by card effects this turn.
+    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, it cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
@@ -118388,7 +118392,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up "Yamiruler the Dark Delayer" on your field. While that monster is face-up, it gains 500 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Choose 1 face-up "Yamiruler the Dark Delayer" on your field. While it is face-up, it gains 500 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -127091,7 +127095,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（レベル８以下／ギャラクシー族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -127103,7 +127108,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のマキシマムモンスター（レベル１０／ギャラクシー族）１体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
